--- a/style.css
+++ b/style.css
@@ -17,3 +17,9 @@
 	text-align: center;
 	vertical-align: center;
 }
+#errorWindow{
+	border: 3px solid red;
+	width: 100px;
+	height: 60px;
+	text-align: center;
+}
