made the button id a class

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 	vertical-align: center;
 	display: inline-block;
 }
-#conversionButton{
+.conversionButton{
 	width: 60px;
 	height: 60px;
 	text-align: center;
